--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,3 +140,18 @@ button:hover {
 .table-row:nth-child(even) {
   background-color: #f9f9f9;
 }
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #receipt-print, #receipt-print * {
+    visibility: visible;
+  }
+  #receipt-print {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+}
