--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'TH SarabunPSK', 'Mitr', 'Sarabun', Arial, Helvetica, sans-serif;
+  font-family: 'Mitr', Arial, Helvetica, sans-serif;
   overflow: hidden; /* Prevents scrolling */
 
 }
